--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ color:#07a; border-bottom:5px solid 0af;}
 <h3>저의 웹 포트폴리오 사이트에 오신것을 환영합니다.</h3>
 <dl>
 	<dt>다른 프로젝트로 이동해보기</dt>
-	<dd><a href="https://github.com/sinseungeun/wintertheme.git">첫번째 프로젝트</a></dd>
-	<dd><a href="https://github.com/sinseungeun/uiux10page.git">두번째 프로젝트</a></dd>
-	<dd><a href="https://github.com/sinseungeun/uiux20page.git">세번째 프로젝트</a></dd>
-	<dd><a href="https://github.com/sinseungeun/myweb.git">네번째 프로젝트</a></dd>
+	<dd><a href="https://github.com/sinseungeun/wintertheme.git" target="blank">첫번째 프로젝트</a></dd>
+	<dd><a href="https://github.com/sinseungeun/uiux10page.git" target="blank">두번째 프로젝트</a></dd>
+	<dd><a href="https://github.com/sinseungeun/uiux20page.git" target="blank">세번째 프로젝트</a></dd>
+	<dd><a href="https://github.com/sinseungeun/myweb.git" target="blank">네번째 프로젝트</a></dd>
 </dl>
 </body>
 </html>
